samples/_failures_safe/1761536241_d8027b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce9b7e67.c: In function ‘main’:
./samples/SAFE/__tmp_ce9b7e67.c:139:9: error: expected declaration or statement at end of input
  139 |         if (token.type == TOKEN_EOF) break;
      |         ^~
./samples/SAFE/__tmp_ce9b7e67.c:139:9: error: expected declaration or statement at end of input
